# Learn-OpenGL

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Learn.sln  Learn.vcxproj  Learn.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  cmake_install.cmake  config.h  config.h.in  configure.bat  run.bat  vcpkg.json
res/shaders/: Basic.shader
src/: main.cpp
